--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,9 +8,99 @@
     <link href="https://fonts.googleapis.com/css2?family=MuseoModerno:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/layout5.css">
 </head>
+
 <body>
     <header>
-        <p>White Wines- Chardonnay</p>
+        <h2>White Wines- Chardonnay</h2>
+        <nav>
+            <h2 class="left"><a href="#">&laquo;</a></h2>
+            <h2 class="right"><a href="#">&raquo;</a></h2>
+        </nav>
     </header>
+
+    <div id="footer_wrap">
+        <div id="right_box">
+            <h2>Sauvignon Blanc</h2>
+            <p>Depending on the climate, the flavor can range from grass to tropical fruit.</p><br>
+            <p>In cooler climates, the wines have noticeable acidity and flavors of grass and passion fruit.</p><br>
+            <p>In warmer climates, the wines can develop over-ripeness aromas like grapefruit, peach, and melon.</p>
+        </div>
+        <div id="table_wrap">
+            <img src="img/img_chardonnay.jpg" alt="">
+            <h2>Sauvignon Blanc</h2>
+            <table>
+                <tr bgcolor="#AACDD3" align="left">
+                    <th><h4>Food</h4></th>
+                    <th><h4>Type</h4></th>
+                </tr>
+                <tr bgcolor="#F9F7EC">
+                    <td>Seafood</td>
+                    <td>Fish</td>
+                </tr>
+                <tr bgcolor="#F4E4EA">
+                    <td>Meat</td>
+                    <td>Chicken, Pork, Veal</td>
+                </tr>
+                <tr bgcolor="#F9F7EC">
+                    <td>Cheese</td>
+                    <td>Herbed goat cheese, Nutty cheese, Gruyere</td>
+                </tr>
+                <tr bgcolor="#F4E4EA">
+                    <td>Other</td>
+                    <td>Mexican, Vietnamese</td>
+                </tr>
+            </table>
+
+            <table>
+                <tr bgcolor="#AACDD3" align="left">
+                    <th><h4>Age</h4></th>
+                    <th><h4>Flavour</h4></th>
+                </tr>
+                <tr bgcolor="#F9F7EC">
+                    <td>Less Ripe</td>
+                    <td>Lime, Gooseberry</td>
+                </tr>
+                <tr bgcolor="#F4E4EA">
+                    <td>Medium</td>
+                    <td>Green apple, Citrus, Passion fruit</td>
+                </tr>
+                <tr bgcolor="#F9F7EC">
+                    <td>More Ripe</td>
+                    <td>Grapefruit, Peach, Melon</td>
+                </tr>
+                <tr bgcolor="#F4E4EA">
+                    <td>Oaked</td>
+                    <td>Vanilla, Smoke</td>
+                </tr>
+            </table>
+
+            <h2>Neighbors</h2>
+            <table>
+                <tr bgcolor="#AACDD3" align="left">
+                    <th><h4>Neighbor</h4></th>
+                    <th><h4>Flavour</h4></th>
+                </tr>
+                <tr bgcolor="#F9F7EC">
+                    <td>Seafood</td>
+                    <td>Fish</td>
+                </tr>
+                <tr bgcolor="#F4E4EA">
+                    <td>Meat</td>
+                    <td>Chicken, Pork, Veal</td>
+                </tr>
+                <tr bgcolor="#F9F7EC">
+                    <td>Cheese</td>
+                    <td>Herbed goat cheese, Nutty cheese, Gruyere</td>
+                </tr>
+                <tr bgcolor="#F4E4EA">
+                    <td>Other</td>
+                    <td>Mexican, Vietnamese</td>
+                </tr>
+            </table>
+
+        </div>
+
+    </div>
 </body>
+
 </html>
