--- a/index_2.html
+++ b/index_2.html
@@ -13,21 +13,26 @@
     <header>
         <h2>White Wines- Chardonnay</h2>
         <nav>
-            <h2 class="left"><a href="index_2.html">&laquo;</a></h2>
-            <h2 class="right"><a href="index_2.html">&raquo;</a></h2>
+            <h2 class="left"><a href="index.html">&laquo;</a></h2>
+            <h2 class="right"><a href="index.html">&raquo;</a></h2>
         </nav>
     </header>
 
     <div id="footer_wrap">
         <div id="right_box">
-            <h2>Sauvignon Blanc</h2>
+            <h2>Chardonnay</h2>
             <p>Depending on the climate, the flavor can range from grass to tropical fruit.</p><br>
-            <p>In cooler climates, the wines have noticeable acidity and flavors of grass and passion fruit.</p><br>
-            <p>In warmer climates, the wines can develop over-ripeness aromas like grapefruit, peach, and melon.</p>
+            <p>The taste of the Chardonnay grape is very neutral and easy to like.</p><br>
+            <p>Many of the Chardonnay flavors are derived from terroir and oak-aging.</p><br>
+            <p>The flavors varies from noticeable acidity (Cold Climates), to crisply and mineral (Chablis, France) with flavors of green plum, apple and pear, to heavy oak and tropical fruit flavors (the New World).</p><br>
+            <p>In cooler climates Chardonnay tends to be under-riped.</p><br>
+            <p>In warmer climates the flavors tend to vary from lemon to peach and melon.</p><br>
+            <p>In very warm climates Chardonnay tends to be over-riped.</p><br>
+            <p>Oaked Chardonnay tends to have softer acidity and more fruit flavors with added butter, cream and hazelnut notes.</p><br>
         </div>
         <div id="table_wrap">
-            <img src="img/img_chardonnay.jpg" alt="">
-            <h2>Sauvignon Blanc</h2>
+            <img src="img/img_sauvignon_blanc.jpg" alt="">
+            <h2>Food</h2>
             <table>
                 <thead>
                     <tr bgcolor="#AACDD3" align="left">
@@ -55,7 +60,7 @@
                     </tr>
                 </tbody>
             </table>
-
+            <h2>Flavours</h2>
             <table>
                 <thead>
                     <tr bgcolor="#AACDD3" align="left">
@@ -83,7 +88,7 @@
                 </tbody>
             </table>
 
-            <h2>Neighbors</h2>
+            <h2>Neighbours</h2>
             <table>
                 <thead>
                     <tr bgcolor="#AACDD3" align="left">
